oneIIVI_SIT_metadata/force-app/main/default/objects/Opportunity/fields/Lost_Cancelled_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Cancelled_Rejected_Reason__c</fullName>
    <label>Lost/Cancelled/Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price Request Only</fullName>
            </value>
            <value>
                <fullName>Concept Viability Study Only</fullName>
            </value>
            <value>
                <fullName>Uncompetitive Pricing</fullName>
            </value>
            <value>
                <fullName>Unable to meet Technical Specification</fullName>
            </value>
            <value>
                <fullName>Alternative Technology Chosen</fullName>
            </value>
            <value>
                <fullName>Part not available (NPI)</fullName>
            </value>
            <value>
                <fullName>Long Lead Time</fullName>
            </value>
            <value>
                <fullName>Project Cancelled by Customer</fullName>
            </value>
            <value>
                <fullName>Project lost by customer</fullName>
            </value>
            <value>
                <fullName>Product Cancelled by II-VI</fullName>
            </value>
            <value>
                <fullName>No evidence of active support of customer ??</fullName>
            </value>
            <value>
                <fullName>Customer demand changed</fullName>
            </value>
            <value>
                <fullName>Customer decided on using a different II-VI PN</fullName>
            </value>
            <value>
                <fullName>Customer did not accept T&apos;s &amp; C&apos;s</fullName>
            </value>
            <value>
                <fullName>Bought from OEM</fullName>
            </value>
            <value>
                <fullName>Bought from competitor (Price)</fullName>
            </value>
            <value>
                <fullName>Bought from competitor (technical)</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Entry Error</fullName>
            </value>
            <value>
                <fullName>Transferred to distributor</fullName>
            </value>
            <value>
                <fullName>Disti was Promoting Competitive solution (for Design Reg)</fullName>
            </value>
            <value>
                <fullName>Disti’s end Customer preferences change (for Design Reg)</fullName>
            </value>
            <value>
                <fullName>Disti’s Lack of inventory and pipeline (for Design Reg)</fullName>
            </value>
            <value>
                <fullName>New Region Assigned</fullName>
            </value>
            <value>
                <fullName>Customer decided on using a different Finisar PN</fullName>
                <isActive>false</isActive>
                <label>Customer decided on using a different Finisar PN</label>
            </value>
            <value>
                <fullName>Disti&apos;s end Customer preferences change (for Design Reg)</fullName>
                <isActive>false</isActive>
                <label>Disti&apos;s end Customer preferences change (for Design Reg)</label>
            </value>
            <value>
                <fullName>Factory Leadtimes, can&apos;t support volume/schedule</fullName>
                <isActive>false</isActive>
                <label>Factory Leadtimes, can&apos;t support volume/schedule</label>
            </value>
            <value>
                <fullName>Factory Leadtimes, can’t support volume/schedule</fullName>
                <isActive>false</isActive>
                <label>Factory Leadtimes, can’t support volume/schedule</label>
            </value>
            <value>
                <fullName>No evidence of active support of customer</fullName>
                <isActive>false</isActive>
                <label>No evidence of active support of customer</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>