oneIIVI_SIT_metadata/force-app/main/default/objects/Opportunity/recordTypes/Customizable_Standard_Part.recordType-meta.xml
<RecordType>
    <fullName>Customizable_Standard_Part</fullName>
    <active>true</active>
    <businessProcess>Customizable Standard Part</businessProcess>
    <label>Customizable Standard Part</label>
</RecordType>