oneIIVI_SIT_metadata/force-app/main/default/objects/Opportunity/validationRules/Customer_Qual_Reqd_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Qual_Reqd_Required</fullName>
    <active>false</active>
    <description>Customer_Qual_Req&apos;d is mandaory for Legacy Marlow users</description>
    <errorConditionFormula>AND(ISPICKVAL( $User.Legacy_Company__c , &apos;Marlow&apos;),ISPICKVAL( Qual_Required__c , &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Qual_Required__c</errorDisplayField>
    <errorMessage>Please select the Customer_Qual_Req&apos;d</errorMessage>
</ValidationRule>