oneIIVI_SIT_metadata/force-app/main/default/objects/Opportunity/validationRules/HY_require_Product_Line.validationRule-meta.xml
<ValidationRule>
    <fullName>HY_require_Product_Line</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
TEXT( Segment__c ) = &quot;HighYag&quot;,
ISBLANK(TEXT( Product_Line__c ))
)</errorConditionFormula>
    <errorDisplayField>Product_Line__c</errorDisplayField>
    <errorMessage>You must select the Highyag Product Line</errorMessage>
</ValidationRule>